# sbertech

./: .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  generate-openapi-spec.py  poetry.toml  pyproject.toml  run-container.sh
backend/: __init__.py  app.py
backend/config/: __init__.py  app.py  logger.py
backend/domain/: deposits.py
backend/pydantic_models/: common.py
backend/pydantic_models/v1/: deposits.py
backend/pydantic_models/v2/: deposits.py
backend/routers/v1/: __init__.py  deposits.py
backend/routers/v2/: __init__.py  deposits.py
openapi/: api-references.yml
tests/: test_domain_deposits.json  test_domain_deposits.py  test_endpoints.json  test_endpoints.py
