[tool.poetry]
name = "sbertech"
version = "0.1.0"
description = ""
authors = ["Anatoly Ploshchadnyy"]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.105.0"
dateutils = "^0.6.12"
pydantic = "^2.5.3"
uvicorn = "^0.25.0"
pre-commit = "^3.6.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"
pytest-cov = "^4.1.0"
coverage = "^7.3.4"
httpx = "^0.26.0"
parametrize-from-file = "^0.19.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
